[gd_scene load_steps=3 format=3 uid="uid://qjm1e00amf4x"]

[ext_resource type="Script" path="res://menus/sandbox/sandbox_options.gd" id="1_bv4pc"]
[ext_resource type="PackedScene" uid="uid://rmxm5r67j8cg" path="res://menus/sandbox/sandbox_tabs.tscn" id="2_mw015"]

[node name="SandboxOptions" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bv4pc")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = -48

[node name="Sandbox_Settings" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Sandbox Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SandboxTabs" parent="MarginContainer/VBoxContainer" instance=ExtResource("2_mw015")]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 75)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
focus_mode = 0
theme_override_font_sizes/font_size = 40
text = "Exit"

[node name="ResetTab" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 75)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
focus_mode = 0
theme_override_font_sizes/font_size = 40
text = "Reset Tab
"

[node name="Save" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 75)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
focus_mode = 0
theme_override_font_sizes/font_size = 40
text = "Save
"

[node name="SavePlay" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 75)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
focus_mode = 0
theme_override_font_sizes/font_size = 40
text = "Save/Play
"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/ResetTab" to="." method="_on_reset_tab_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/SavePlay" to="." method="_on_save_play_pressed"]
